tweaked name header on smallest screen to drop to new line, fixed wrong link on match pairs page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3190,7 +3190,7 @@ input, select, textarea {
 			}
 
 				#header h1 br {
-					display: none;
+					display: inline;
 				}
 
 		/* Footer */
